components/fastapi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
  labels:
    app: fastapi
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/backend-protocol: HTTP
    traefik.ingress.kubernetes.io/router.tls: "false"
spec:
  rules:
    - host: fastapi.192.168.1.23.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fastapi-service
                port:
                  number: 8000
